--- a/docs/reappointment/research-statement/all.bib
+++ b/docs/reappointment/research-statement/all.bib
@@ -2206,3 +2206,54 @@ keywords = {distributed systems, software verification}
   year = {2025},
   note = {Accessed: 2025-08-12}
 }
+
+@misc{darpa-airforce,
+author = {{Defense Advanced Research Projects Agency (DARPA)}},
+title = {Accelerating cyber resilience: Air Force, {DARPA} join forces to strengthen cyber defenses},
+howpublished = {\url{https://www.darpa.mil/news/2025/accelerating-cyber-resilience-air-force-darpa-join-forces-strengthen-cyber-defenses}},
+year = {2025},
+note = {Accessed: August 20, 2025}
+}
+
+@misc{nasa-fm,
+author = {Jeff Maddalon and Aaron Dutle},
+title = {NASA Langley Formal Methods Research Program},
+howpublished = {\url{https://shemesh.larc.nasa.gov/fm/}},
+year = {2025},
+note = {Accessed: August 20, 2025}
+}
+
+@misc{project-everest,
+author = {{Project Everest Collaborators}},
+title = {Project Everest},
+howpublished = {\url{https://project-everest.github.io/}},
+year = {2016--2021},
+note = {Accessed: August 20, 2025}
+}
+
+@misc{smt-primer,
+author = {Mr. Rc},
+title = {Understanding SMT solvers: An Introduction to Z3},
+howpublished = {\url{https://de-engineer.github.io/SMT-Solvers/}},
+publisher = {de engineering},
+year = {2022},
+note = {Accessed: August 20, 2025}
+}
+
+@article{ohearn-popl19,
+author = {O'Hearn, Peter W.},
+title = {Incorrectness logic},
+year = {2019},
+issue_date = {January 2020},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {4},
+number = {POPL},
+url = {https://doi.org/10.1145/3371078},
+doi = {10.1145/3371078},
+month = dec,
+articleno = {10},
+numpages = {32},
+keywords = {none}
+}
+
