--- a/docs/reappointment/teaching-statement/statement.tex
+++ b/docs/reappointment/teaching-statement/statement.tex
@@ -30,10 +30,11 @@
 %\usepackage[sc]{mathpazo}
 \usepackage{newpxtext}
 \usepackage[T1]{fontenc}
-
+\usepackage{datetime}
+ 
 
 % My settings
-% -------------
+% --------------
 \newcommand{\mypara}[1]{\noindent\fcolorbox{white}{black!5}{\bf #1}}
 
 % For block quote
@@ -73,6 +74,7 @@
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[L]{\Large Gowtham Kaki {\color{Gray} {$\vert$} Teaching Statement} }
+\fancyfoot[R]{\today\ \currenttime}
 \renewcommand{\headrulewidth}{0pt}
 
 % === FIX FOR THE TITLE PAGE ===
@@ -81,6 +83,7 @@
 \fancypagestyle{plain}{
   \fancyhf{} % clear all header and footer fields
   \fancyhead[L]{\Large Gowtham Kaki {\color{Gray} {$\vert$} Teaching Statement} }
+  \fancyfoot[R]{\today\ \currenttime}
   \renewcommand{\headrulewidth}{0pt}
 }
 % ==============================
